Pass timeSupplier into InMemoryFileInfoStore for tests